--- a/website/index.html
+++ b/website/index.html
@@ -285,16 +285,16 @@ window.Quarto = {
 </div>
 <div id="listing-listings" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1713218127931" data-listing-reading-time-sort="11" data-listing-word-count-sort="2052">
-<a href="./models/bayes.html" class="quarto-grid-link">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1713341428433" data-listing-reading-time-sort="15" data-listing-word-count-sort="2830">
+<a href="./models/dtrees.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="images/nb.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<p class="card-img-top"><img src="images/dt_1.jpg" alt="Decision tree structure" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title" data-anchor-id="home">
-Naive Bayes
+Decision Trees
 </h5>
 <div class="card-text listing-description">
-Naive Bayes is a popular and simple probabilistic machine learning algorithm based on Bayes’ theorem. It is commonly used for classification tasks, such as spam email…
+Decision trees are a popular supervised learning algorithm used for both classification and regression tasks in machine learning. They are tree-like structures where each…
 </div>
 <div class="card-attribution card-text-small start">
 <div class="listing-author">
@@ -305,16 +305,16 @@ Naive Bayes is a popular and simple probabilistic machine learning algorithm bas
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1713215139990" data-listing-reading-time-sort="3" data-listing-word-count-sort="494">
-<a href="./models/dtrees.html" class="quarto-grid-link">
+<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1713336948019" data-listing-reading-time-sort="11" data-listing-word-count-sort="2052">
+<a href="./models/bayes.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="images/dt_1.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<p class="card-img-top"><img src="images/nb.jpg" alt="How Naive Bayes classifies categories." style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
-Decision Trees
+Naive Bayes
 </h5>
 <div class="card-text listing-description">
-Decision trees are a popular supervised learning algorithm used for both classification and regression tasks in machine learning. They are tree-like structures where each…
+Naive Bayes is a popular and simple probabilistic machine learning algorithm based on Bayes’ theorem. It is commonly used for classification tasks, such as spam email…
 </div>
 <div class="card-attribution card-text-small start">
 <div class="listing-author">
