--- a/website/models/bayes.html
+++ b/website/models/bayes.html
@@ -41,6 +41,9 @@ ul.task-list li input[type="checkbox"] {
 <script src="../site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="../site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="../site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="../site_libs/quarto-contrib/glightbox/glightbox.min.js"></script>
+<link href="../site_libs/quarto-contrib/glightbox/glightbox.min.css" rel="stylesheet">
+<link href="../site_libs/quarto-contrib/glightbox/lightbox.css" rel="stylesheet">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -252,7 +255,7 @@ ul.task-list li input[type="checkbox"] {
 <div style="float:right; width:34%; padding:2%">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="../images/nb.jpg" class="img-fluid figure-img"></p>
+<p><a href="../images/nb.jpg" class="lightbox" data-gallery="quarto-lightbox-gallery-1" data-glightbox="description: .lightbox-desc-1" title="How Naive Bayes classifies categories."><img src="../images/nb.jpg" class="img-fluid figure-img" alt="How Naive Bayes classifies categories."></a></p>
 <figcaption>How Naive Bayes classifies categories.</figcaption>
 </figure>
 </div>
@@ -279,33 +282,33 @@ Table&nbsp;1: The input feature pre-transformation for input into the model, and
 <style type="text/css">
 </style>
 
-<table id="T_1c5f1" class="do-not-create-environment cell table table-sm table-striped small" data-quarto-postprocess="true">
+<table id="T_4690c" class="do-not-create-environment cell table table-sm table-striped small" data-quarto-postprocess="true">
 <thead>
 <tr class="header">
-<th id="T_1c5f1_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Name</th>
-<th id="T_1c5f1_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">Category</th>
+<th id="T_4690c_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Name</th>
+<th id="T_4690c_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">Category</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td id="T_1c5f1_row0_col0" class="data row0 col0">DLMAC8 Pin Point Syringe Kit</td>
-<td id="T_1c5f1_row0_col1" class="data row0 col1">Kids' Play Trains &amp; Trams</td>
+<td id="T_4690c_row0_col0" class="data row0 col0">BB0117O Silver 57/18/145 unisex Eyewear Frame</td>
+<td id="T_4690c_row0_col1" class="data row0 col1">Men's Accessories</td>
 </tr>
 <tr class="even">
-<td id="T_1c5f1_row1_col0" class="data row1 col0">Dry Backpack (Olive, 30L)</td>
-<td id="T_1c5f1_row1_col1" class="data row1 col1">Backpacks</td>
+<td id="T_4690c_row1_col0" class="data row1 col0">6 Pack Rinse-Clean Spin Mop Replacement Heads Mop Replace Refills Microfiber Compatible with Spin Mop 2 Tank System,(Small Triangle &amp; Blue)</td>
+<td id="T_4690c_row1_col1" class="data row1 col1">Household Cleaning Supplies</td>
 </tr>
 <tr class="odd">
-<td id="T_1c5f1_row2_col0" class="data row2 col0">TAODUDU Toddler Toys Cars Kids Truck Transport Cars Boys Gift for Ages 3-8 Year Old,Transport Cars Carrier Set with 12 Die-cast Vehicles</td>
-<td id="T_1c5f1_row2_col1" class="data row2 col1">Toys &amp; Games</td>
+<td id="T_4690c_row2_col0" class="data row2 col0">10 PCS Baby Brine Shrimp Net Fish Sieve for Fish Tank Aquarium Fine Artemia Net Small for Brine Shrimp Hatchery</td>
+<td id="T_4690c_row2_col1" class="data row2 col1">Fish &amp; Aquatic Pets</td>
 </tr>
 <tr class="even">
-<td id="T_1c5f1_row3_col0" class="data row3 col0">LUV HER Princess Toys Tiaras For Girls - Jewelry for Girls - Dress Up set All in one Giftable Box - Tiaras - Play Jewelry Set - 4pc Princess Tiara, Necklace, Dress Up Bracelet, Ring Ages 3+</td>
-<td id="T_1c5f1_row3_col1" class="data row3 col1">Kids' Dress Up &amp; Pretend Play</td>
+<td id="T_4690c_row3_col0" class="data row3 col0">PLANTIFIQUE Foot Peel Mask with Avocado 2 Pack Peeling Foot Mask Dermatologically Tested - Repairs Heels &amp; Removes Dead Skin for Baby Soft Feet - Exfoliating Foot Peel Mask for Dry Cracked Feet</td>
+<td id="T_4690c_row3_col1" class="data row3 col1">Foot, Hand &amp; Nail Care Products</td>
 </tr>
 <tr class="odd">
-<td id="T_1c5f1_row4_col0" class="data row4 col0">Allerpet Cat Dander Remover w/Free Pair of Grooming Gloves and Mitt - Effective Cat Dander Reduction, Anti Allergen Solution Made in USA - (12oz)</td>
-<td id="T_1c5f1_row4_col1" class="data row4 col1">Cat Supplies</td>
+<td id="T_4690c_row4_col0" class="data row4 col0">Unisex-Child Jump Serve Slip on Sneaker</td>
+<td id="T_4690c_row4_col1" class="data row4 col1">Boys' Shoes</td>
 </tr>
 </tbody>
 </table>
@@ -337,7 +340,7 @@ Table&nbsp;1: The input feature pre-transformation for input into the model, and
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-sparse-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <p><code>&lt;343558x183699 sparse matrix of type '&lt;class 'numpy.float64'&gt;</code> <code>with 5305684 stored elements in Compressed Sparse Row format&gt;</code></p>
-<p><img src="../images/sparse.png" class="img-fluid figure-img"></p>
+<p><a href="../images/sparse.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2" data-glightbox="description: .lightbox-desc-2"><img src="../images/sparse.png" class="img-fluid figure-img"></a></p>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-sparse-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: An example of how sparse matrices are used and the training data as a sparse matrix.
@@ -543,7 +546,7 @@ Table&nbsp;3: The table of performance metrics for the top 15 correctly-labeled 
 <div id="fig-cm1" class="quarto-figure quarto-figure-center quarto-float anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-cm1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img src="../images/nb_cm.png" class="img-fluid figure-img">
+<a href="../images/nb_cm.png" class="lightbox" data-gallery="quarto-lightbox-gallery-3" data-glightbox="description: .lightbox-desc-3"><img src="../images/nb_cm.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-cm1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;2: The confusion matrix of all categories
@@ -554,7 +557,7 @@ Figure&nbsp;2: The confusion matrix of all categories
 <div id="fig-cm2" class="quarto-figure quarto-figure-center quarto-float anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-cm2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img src="../images/nb_cm_top.png" class="img-fluid figure-img">
+<a href="../images/nb_cm_top.png" class="lightbox" data-gallery="quarto-lightbox-gallery-4" data-glightbox="description: .lightbox-desc-4"><img src="../images/nb_cm_top.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-cm2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;3: The confusion matrix for top 15 correctly-classified categories
@@ -575,6 +578,12 @@ Figure&nbsp;3: The confusion matrix for top 15 correctly-classified categories
 <p>Overall, the multinomial Naive Bayes model performed surprisingly well at predicting the category of a given Amazon product given its product name.</p>
 
 
+<div class="hidden" aria-hidden="true">
+<span class="glightbox-desc lightbox-desc-1">How Naive Bayes classifies categories.</span>
+<span class="glightbox-desc lightbox-desc-2">Figure&nbsp;1: An example of how sparse matrices are used and the training data as a sparse matrix.</span>
+<span class="glightbox-desc lightbox-desc-3">Figure&nbsp;2: The confusion matrix of all categories</span>
+<span class="glightbox-desc lightbox-desc-4">Figure&nbsp;3: The confusion matrix for top 15 correctly-classified categories</span>
+</div>
 </section>
 
 </main> <!-- /main -->
@@ -978,6 +987,31 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
 </nav>
 </div> <!-- /content -->
+<script>var lightboxQuarto = GLightbox({"loop":false,"openEffect":"zoom","selector":".lightbox","descPosition":"bottom","closeEffect":"zoom"});
+window.onload = () => {
+  lightboxQuarto.on('slide_before_load', (data) => {
+    const { slideIndex, slideNode, slideConfig, player, trigger } = data;
+    const href = trigger.getAttribute('href');
+    if (href !== null) {
+      const imgEl = window.document.querySelector(`a[href="${href}"] img`);
+      if (imgEl !== null) {
+        const srcAttr = imgEl.getAttribute("src");
+        if (srcAttr && srcAttr.startsWith("data:")) {
+          slideConfig.href = srcAttr;
+        }
+      }
+    } 
+  });
+
+  lightboxQuarto.on('slide_after_load', (data) => {
+    const { slideIndex, slideNode, slideConfig, player, trigger } = data;
+    if (window.Quarto?.typesetMath) {
+      window.Quarto.typesetMath(slideNode);
+    }
+  });
+
+};
+          </script>
 
 
 
